# aws-c-common

./: .clang-format  .clang-tidy  .codebuild.json  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  THIRD-PARTY-LICENSES.txt  builder.json  buildspec.yml  cppcheck.sh  format-check.py  format-check.sh  sanitizer-blacklist.txt
aws_crt_common_ws/aws-crt-c-flags/: Cargo.toml
aws_crt_common_ws/aws-crt-c-flags/src/: lib.rs
aws_crt_common_ws/aws-crt-common/: Cargo.toml
aws_crt_common_ws/aws-crt-common-sys/: Cargo.toml  build.rs
aws_crt_common_ws/aws-crt-common-sys/src/: lib.rs
aws_crt_common_ws/aws-crt-common/src/: lib.rs
aws_crt_common_ws/aws-crt-common/tests/: lib.rs
tests/: CMakeLists.txt  alloc_test.c  array_list_test.c  array_list_with_map_test.c  assert_test.c  atomics_test.c  aws_profile_fatal_parse_tests.c  aws_profile_tests.c  aws_test_harness.h  bigint_test.c  bus_test.c  byte_buf_test.c  byte_cursor_find_test.c  byte_order_test.c  cache_test.c  calloc_test.c  cbor_test.c  clock_test.c  command_line_parser_test.c  condition_variable_test.c  cpuid_test.c  cross_process_lock_tests.c  cursor_test.c  date_time_test.c  device_random_test.c  encoding_test.c  environment_test.c  error_test.c  file_open_test.c  file_test.c  hash_table_test.c  host_util_test.c  io_util_tests.c  json_test.c  linked_hash_table_test.c  linked_list_test.c  log_test.c  log_test.h  lru_cache_test.c  main.c  (+32 more)
tests/cbmc/proofs/: Makefile.common
tests/cbmc/proofs/aws_array_eq_c_str/: Makefile
tests/cbmc/proofs/aws_array_eq_ignore_case/: Makefile
tests/cbmc/proofs/aws_array_list_back/: Makefile
tests/cbmc/proofs/aws_array_list_comparator_string/: Makefile
tests/cbmc/proofs/aws_array_list_front/: cbmc-batch.yaml
tests/cbmc/proofs/aws_array_list_get_at/: Makefile
tests/cbmc/proofs/aws_array_list_init_dynamic/: aws_array_list_init_dynamic_harness.c
tests/cbmc/proofs/aws_array_list_init_static/: Makefile
tests/cbmc/proofs/aws_array_list_pop_front_n/: Makefile
tests/cbmc/proofs/aws_array_list_push_back/: Makefile
tests/cbmc/proofs/aws_array_list_set_at/: Makefile
tests/cbmc/proofs/aws_array_list_shrink_to_fit/: cbmc-batch.yaml
tests/cbmc/proofs/aws_array_list_swap_contents/: Makefile  aws_array_list_swap_contents_harness.c  cbmc-batch.yaml
tests/cbmc/proofs/aws_byte_buf_append_dynamic/: Makefile
tests/cbmc/proofs/aws_byte_buf_append_with_lookup/: Makefile  cbmc-batch.yaml
tests/cbmc/proofs/aws_byte_buf_cat/: Makefile  aws_byte_buf_cat_harness.c
tests/cbmc/proofs/aws_byte_buf_clean_up/: Makefile
tests/cbmc/proofs/aws_byte_buf_clean_up_secure/: Makefile
tests/cbmc/proofs/aws_byte_buf_eq/: Makefile
tests/cbmc/proofs/aws_byte_buf_eq_c_str/: Makefile
tests/cbmc/proofs/aws_byte_buf_eq_ignore_case/: Makefile
tests/cbmc/proofs/aws_byte_buf_from_array/: Makefile  cbmc-batch.yaml
tests/cbmc/proofs/aws_byte_buf_from_c_str/: Makefile
tests/cbmc/proofs/aws_byte_buf_from_empty_array/: Makefile
tests/cbmc/proofs/aws_byte_buf_init_copy/: Makefile
tests/cbmc/proofs/aws_byte_buf_init_copy_from_cursor/: Makefile
tests/cbmc/proofs/aws_byte_buf_reserve/: Makefile
tests/cbmc/proofs/aws_byte_buf_reset/: Makefile
tests/cbmc/proofs/aws_byte_buf_secure_zero/: Makefile  cbmc-batch.yaml
tests/cbmc/proofs/aws_byte_buf_write_be16/: Makefile
tests/cbmc/proofs/aws_byte_buf_write_be64/: Makefile
tests/cbmc/proofs/aws_byte_buf_write_from_whole_buffer/: Makefile
tests/cbmc/proofs/aws_byte_buf_write_u8/: Makefile  cbmc-batch.yaml
tests/cbmc/proofs/aws_byte_cursor_advance/: Makefile
tests/cbmc/proofs/aws_byte_cursor_advance_nospec/: Makefile
tests/cbmc/proofs/aws_byte_cursor_compare_lexical/: Makefile
tests/cbmc/proofs/aws_byte_cursor_eq/: Makefile
tests/cbmc/proofs/aws_byte_cursor_eq_byte_buf/: Makefile
tests/cbmc/proofs/aws_byte_cursor_eq_c_str/: Makefile  cbmc-batch.yaml
tests/cbmc/proofs/aws_byte_cursor_eq_c_str_ignore_case/: Makefile
tests/cbmc/proofs/aws_byte_cursor_eq_ignore_case/: Makefile  aws_byte_cursor_eq_ignore_case_harness.c
tests/cbmc/proofs/aws_byte_cursor_from_array/: Makefile
tests/cbmc/proofs/aws_byte_cursor_from_buf/: Makefile  cbmc-batch.yaml
tests/cbmc/proofs/aws_byte_cursor_from_c_str/: Makefile
tests/cbmc/proofs/aws_byte_cursor_left_trim_pred/: Makefile
tests/cbmc/proofs/aws_byte_cursor_read_and_fill_buffer/: Makefile
tests/cbmc/proofs/aws_byte_cursor_read_be16/: Makefile
tests/cbmc/proofs/aws_byte_cursor_read_be32/: Makefile  aws_byte_cursor_read_be32_harness.c
tests/cbmc/proofs/aws_byte_cursor_read_be64/: Makefile
tests/cbmc/proofs/aws_byte_cursor_read_u8/: Makefile
tests/cbmc/proofs/aws_byte_cursor_right_trim_pred/: Makefile
tests/cbmc/proofs/aws_hash_byte_cursor_ptr/: Makefile
tests/cbmc/proofs/aws_hash_callback_c_str_eq/: Makefile
tests/cbmc/proofs/aws_hash_callback_string_destroy/: Makefile
tests/cbmc/proofs/aws_hash_callback_string_eq/: Makefile
tests/cbmc/proofs/aws_hash_iter_begin/: Makefile
tests/cbmc/proofs/aws_hash_iter_delete/: Makefile
tests/cbmc/proofs/aws_hash_iter_done/: Makefile
tests/cbmc/proofs/aws_hash_string/: Makefile  cbmc-batch.yaml
tests/cbmc/proofs/aws_hash_table_clean_up/: Makefile
tests/cbmc/proofs/aws_hash_table_create/: Makefile
tests/cbmc/stubs/: memset_override_havoc.c  qsort_override.c
tests/cbmc/uninline/: ring_buffer.c
tests/fuzz/: base64_encoding_transitive.c  cbor_decoding_transitive.c  cbor_double_encode_decode.c  hex_encoding_transitive.c
tests/logging/: log_channel_test.c  log_formatter_test.c  log_writer_test.c  logging_filter_debug_static_test.c  logging_filter_error_static_test.c  logging_filter_fatal_static_test.c  logging_filter_info_static_test.c  logging_filter_none_static_test.c  logging_filter_trace_static_test.c  logging_filter_warn_static_test.c  logging_general_test.c  logging_misc.c  logging_test_utilities.c  logging_test_utilities.h  pipeline_logger_test.c  test_logger.c  test_logger.h
tests/resources/: ascii.txt  utf16be.txt  utf16le.txt  utf8.txt  Å Éxample.txt
tests/resources/dir_traversal_test/: root_child.txt
(+1874 files in other folders)
